Bug 1180643 - Fix the SetY() method on LogicalPoint to update the correct field. r=smontagu